fix fondo blanco desafio arrays

--- a/13_Desafio_Complementario_incorporar_arrays/css/style.css
+++ b/13_Desafio_Complementario_incorporar_arrays/css/style.css
@@ -9,7 +9,9 @@
 #areaImpresion {
 	background-color: white;
 }
-
+#encabezado {
+	padding-top: 5vh;
+}
 /*GRADIENTE ANIMADO TEXTO*/
 .textogradiente {
 	color: #7431dd;
